- API Addition: new InstanceBufferObject and InstanceBufferObjectSubData classes to enable instanced rendering.
- API Addition: Support for InstancedRendering via Mesh
- API Change: Cell#setLayout renamed to setTable.
- API Addition: Added Collections#allocateIterators. When true, iterators are allocated. When false (default), iterators cannot be used nested.

[1.9.9]
- API Addition: Add support for stripping whitespace in PixmapPacker
- API Addition: Add support for 9 patch packing in PixmapPacker
- API Addition: Pressure support for ios/android. https://github.com/libgdx/libgdx/pull/5270
- Update to Lwjgl 3.2.0
- Update android level we build against to 7.1 (API 25)
- API Change: gdx-tools no longer bundles dependencies to be compatible with java 9
- Skin JSON files can now use the simple names of classes, i.e. "BitmapFont" rather than "com.badlogic.gdx.graphics.g2d.BitmapFont". Custom classes can be added by overriding Skin.getJsonLoader() and calling json.setClassTag().
- Skin supports cascading styles in JSON. Use the "parent" property to tag another style by name to use its values as defaults. See https://github.com/libgdx/libgdx/blob/master/tests/gdx-tests-android/assets/data/uiskin.json for example.
- SkinLoader can be used on subclasses of Skin by overriding generateSkin(). 
- API addition: Tree indentation can be customized.
- Fixed GlyphLayout not respecting BitmapFontData#down.
- API Addition: Added faceIndex paramter to #FreeTypeFontGenerator(FileHandle, int).
- API Change: BitmapFont#getSpaceWidth changed to BitmapFont#getSpaceXadvance.
- Many GlyphLayout fixes.
- API Addition: Added FileHandle#map(), can be used to memory map a file
- API Change: BitmapFontData#getGlyphs changed for better glyph layout. See https://github.com/libgdx/libgdx/commit/9a7dfdff3c6374a5ebd2f33a819982aceb287dfa
- API Change: Actor#hit is now responsible for returning null if invisible. #5264