@@ -322,13 +322,21 @@ public class Group extends Actor implements Cullable {
 		return removeActor(actor, true);
 	}
 
+	/** Removes an actor from this group. Calls {@link #removeActorAt(int, boolean)} with the actor's child index. */
+	public boolean removeActor (Actor actor, boolean unfocus) {
+		int index = children.indexOf(actor, true);
+		if (index == -1) return false;
+		removeActorAt(index, unfocus);
+		return true;
+	}
+
 	/** Removes an actor from this group. If the actor will not be used again and has actions, they should be
 	 * {@link Actor#clearActions() cleared} so the actions will be returned to their
 	 * {@link Action#setPool(com.badlogic.gdx.utils.Pool) pool}, if any. This is not done automatically.
 	 * @param unfocus If true, {@link Stage#unfocus(Actor)} is called.
-	 * @return true if the actor was removed from this group. */
-	public boolean removeActor (Actor actor, boolean unfocus) {
-		if (!children.removeValue(actor, true)) return false;
+	 * @return the actor removed from this group or null. */
+	public Actor removeActorAt (int index, boolean unfocus) {
+		Actor actor = children.removeIndex(index);
 		if (unfocus) {
 			Stage stage = getStage();
 			if (stage != null) stage.unfocus(actor);
@@ -336,7 +344,7 @@ public class Group extends Actor implements Cullable {
 		actor.setParent(null);
 		actor.setStage(null);
 		childrenChanged();
-		return true;
+		return actor;
 	}
 
 	/** Removes all actors from this group. */
