@@ -198,8 +198,7 @@ public class SplitPane extends WidgetGroup {
 	}
 
 	public void setVertical (boolean vertical) {
-		if (this.vertical == vertical)
-			return;
+		if (this.vertical == vertical) return;
 		this.vertical = vertical;
 		invalidateHierarchy();
 	}
@@ -272,8 +271,8 @@ public class SplitPane extends WidgetGroup {
 		resetTransform(batch);
 	}
 
-	/** @param splitAmount The split amount between the min and max amount. This parameter is clamped during
-	 * layout. See {@link #clampSplitAmount()}.*/
+	/** @param splitAmount The split amount between the min and max amount. This parameter is clamped during layout. See
+	 *           {@link #clampSplitAmount()}. */
 	public void setSplitAmount (float splitAmount) {
 		this.splitAmount = splitAmount; // will be clamped during layout
 		invalidate();
@@ -284,29 +283,29 @@ public class SplitPane extends WidgetGroup {
 	}
 
 	/** Called during layout to clamp the {@link #splitAmount} within the set limits. By default it imposes the limits of the
-	 * {@linkplain #getMinSplitAmount() min amount}, {@linkplain #getMaxSplitAmount() max amount}, and min sizes of the children. This
-	 * method is internally called in response to layout, so it should not call {@link #invalidate()}. */
+	 * {@linkplain #getMinSplitAmount() min amount}, {@linkplain #getMaxSplitAmount() max amount}, and min sizes of the children.
+	 * This method is internally called in response to layout, so it should not call {@link #invalidate()}. */
 	protected void clampSplitAmount () {
 		float effectiveMinAmount = minAmount, effectiveMaxAmount = maxAmount;
-		
-		if (vertical){
+
+		if (vertical) {
 			float availableHeight = getHeight() - style.handle.getMinHeight();
-			if (firstWidget instanceof Layout)
-				effectiveMinAmount = Math.max(effectiveMinAmount, Math.min(((Layout)firstWidget).getMinHeight() / availableHeight, 1));
-			if (secondWidget instanceof Layout)
-				effectiveMaxAmount = Math.min(effectiveMaxAmount, 1 - Math.min(((Layout)secondWidget).getMinHeight() / availableHeight, 1));
+			if (firstWidget instanceof Layout) effectiveMinAmount = Math.max(effectiveMinAmount,
+				Math.min(((Layout)firstWidget).getMinHeight() / availableHeight, 1));
+			if (secondWidget instanceof Layout) effectiveMaxAmount = Math.min(effectiveMaxAmount,
+				1 - Math.min(((Layout)secondWidget).getMinHeight() / availableHeight, 1));
 		} else {
 			float availableWidth = getWidth() - style.handle.getMinWidth();
 			if (firstWidget instanceof Layout)
 				effectiveMinAmount = Math.max(effectiveMinAmount, Math.min(((Layout)firstWidget).getMinWidth() / availableWidth, 1));
-			if (secondWidget instanceof Layout)
-				effectiveMaxAmount = Math.min(effectiveMaxAmount, 1 - Math.min(((Layout)secondWidget).getMinWidth() / availableWidth, 1));
+			if (secondWidget instanceof Layout) effectiveMaxAmount = Math.min(effectiveMaxAmount,
+				1 - Math.min(((Layout)secondWidget).getMinWidth() / availableWidth, 1));
 		}
-		
+
 		if (effectiveMinAmount > effectiveMaxAmount) // Locked handle. Average the position.
 			splitAmount = 0.5f * (effectiveMinAmount + effectiveMaxAmount);
 		else
-			splitAmount =  Math.max(Math.min(splitAmount, effectiveMaxAmount), effectiveMinAmount);
+			splitAmount = Math.max(Math.min(splitAmount, effectiveMaxAmount), effectiveMinAmount);
 	}
 
 	public float getMinSplitAmount () {
@@ -384,7 +383,21 @@ public class SplitPane extends WidgetGroup {
 		}
 		return false;
 	}
-	
+
+	public Actor removeActorAt (int index, boolean unfocus) {
+		Actor actor = super.removeActorAt(index, unfocus);
+		if (actor == firstWidget) {
+			super.removeActor(actor, unfocus);
+			firstWidget = null;
+			invalidate();
+		} else if (actor == secondWidget) {
+			super.removeActor(actor, unfocus);
+			secondWidget = null;
+			invalidate();
+		}
+		return actor;
+	}
+
 	public boolean isCursorOverHandle () {
 		return cursorOverHandle;
 	}
